// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MissingPalletWorklist Navigator Renders and Calls the Manual Scan Button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="manual-scan"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 15,
      }
    }
  >
    <Icon
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</View>
`;

exports[`MissingPalletWorklist Navigator Renders the MissingPalletWorklist Navigator 1`] = `
<StackNavigator
  screenListeners={
    {
      "focus": [Function],
    }
  }
  screenOptions={[Function]}
>
  <Screen
    component={[Function]}
    name="MissingPalletWorklistTabs"
    options={
      {
        "headerLeft": [Function],
        "headerRight": [Function],
        "headerTitle": "[missing "en.WORKLIST.PALLET_WORKLIST" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="ScanPallet"
    options={
      {
        "headerLeft": [Function],
        "headerRight": [Function],
        "headerTitle": "[missing "en.WORKLIST.SCAN_PALLET" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="ScanLocation"
    options={
      {
        "headerLeft": [Function],
        "headerRight": [Function],
        "headerTitle": "[missing "en.LOCATION.SCAN_LOCATION_HEADER" translation]",
      }
    }
  />
</StackNavigator>
`;

exports[`MissingPalletWorklist Navigator Returns the correct screen options 1`] = `
<HeaderBackButton
  canGoBack={true}
  onPress={[MockFunction]}
  testID="back-button"
/>
`;

exports[`MissingPalletWorklist Navigator Returns the correct screen options 2`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-evenly",
    }
  }
>
  <TouchableOpacity
    onPress={[Function]}
    testID="manual-scan"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
          "paddingHorizontal": 15,
        }
      }
    >
      <Icon
        color="#ffffffff"
        name="barcode-scan"
        size={20}
      />
    </View>
  </TouchableOpacity>
</View>
`;
